--- a/src/css/productList.css
+++ b/src/css/productList.css
@@ -1,12 +1,13 @@
-.product-list{}
-.product-list .div{}
+.productList{}
+.productList .div{}
 
 
-.product-list .div .product-wrap{
+.productList .div .product-wrap{
   display: flex; justify-content: space-between; align-items: center;
   flex-wrap: wrap;
   margin-top: 40px; padding: 20px;
 }
+
 .product-list .div .product-wrap .product{
   padding: 10px; margin-top: 10px;
   background-color: #eee;
